# mcp-gateway

./: .gitignore  CLAUDE.md  LICENSE  README.md  flake.nix  pyproject.toml
commands/: mcp-cli.md
modules/home-manager/: default.nix
modules/home-manager/prompts/: axios-system-prompt.md  mcp-cli-system-prompt.md
modules/nixos/: default.nix
openspec/: config.yaml  project.md
openspec/changes/add-mcp-gw-cli/: tasks.md
openspec/changes/archive/2026-03-09-add-mcp-gw-cli/: design.md  proposal.md
openspec/changes/archive/2026-03-09-remove-redundant-servers/: design.md  proposal.md
openspec/changes/decouple-gemini-config/: proposal.md  tasks.md
openspec/changes/decouple-gemini-config/specs/home-manager/: spec.md
openspec/changes/remove-oauth/: proposal.md  tasks.md
openspec/changes/remove-oauth/specs/gateway/: spec.md
openspec/changes/remove-redundant-servers/: tasks.md
openspec/changes/remove-redundant-servers/specs/gateway/: spec.md
src/mcp_gateway/: __init__.py  cli.py  main.py  mcp_transport.py  models.py  server_manager.py
src/mcp_gateway/auth/: __init__.py  config.py  middleware.py  oauth.py  tokens.py
src/mcp_gateway/auth/providers/: __init__.py  base.py  github.py
src/mcp_gateway/static/: manifest.json
src/mcp_gateway/templates/: base.html  index.html  servers.html  tools.html
tests/: test_cli.py
